--- a/views/index.ejs
+++ b/views/index.ejs
@@ -101,7 +101,7 @@
           <h4> Download File </h4>
           <div class="input-group">
               <span class="input-group-addon">ID</span>
-              <input id="msg" type="text" class="form-control" name="msg" placeholder="copy and paster id">
+              <input id="id" type="text" class="form-control" name="id" placeholder="copy and paster id">
           </div>
           <br>
 
