add name and extension to download

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -101,7 +101,9 @@
           <h4> Download File </h4>
           <div class="input-group">
               <span class="input-group-addon">ID</span>
-              <input id="id" type="text" class="form-control" name="id" placeholder="copy and paster id">
+              <input id="id" type="text" class="form-control" name="id" placeholder="copy and paste id">
+              <span class="input-group-addon">Name.extension</span>
+              <input id="name" type="text" class="form-control" name="name" placeholder="input name and extension">
           </div>
           <br>
 
