--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,6 +67,7 @@
 
                 <!-- Submit Form -->
                 <button type="submit" class="btn btn-success">Submit</button>
+                <a href=<%= link %> download>SUP</a>
               </form>
               <br>
 
